# pocket-proxy-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  version.json
.cargo/: audit.toml
src/: adzerk_client.rs  errors.rs  geoip.rs  main.rs  metrics.rs  settings.rs  utils.rs
src/adzerk/: client.rs  defaults.rs  domain_affinities.json  mock_decision.json  mod.rs  models.rs  request_models.rs  response_models.rs  settings.json
src/adzerk/fixtures/: decision.json  spoc.json
src/endpoints/: delete_user.rs  dockerflow.rs  mod.rs  pulse.rs  spocs.rs
